--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ greenlet==3.1.1
 grpc-google-iam-v1==0.13.1
 grpcio==1.68.0
 grpcio-status==1.68.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
